--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ html {
 }
 
 main {
+    width: 100%;
     height: calc(100vh - 80px);
     /* DEBUG */
     background-color: red;
@@ -54,7 +55,8 @@ a {
 /* MAIN */
 /* Sidebar Section */
 .sidebar-section {
-    width: 20%;
+    width: 250px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     background-color: black;
@@ -102,7 +104,8 @@ a {
 
 /* Main-Section */
 .main-section {
-    width: 80%;
+    height: 100%;
+    width: calc(100% - 250px);
     background-color: var(--primary);
     color: white;
     overflow: scroll;
@@ -110,9 +113,11 @@ a {
 
 .main-head {
     height: 80px;
-    width: 100%;
-    background-color: #080b12;
+    width: calc(100% - 250px);
+    background-color: rgba(0, 0, 0, .4);
     position: fixed;
+    top: 0;
+    right: 0;
     z-index: 999;
 }
 
@@ -120,8 +125,11 @@ a {
     color: white;
 }
 
+.main-section-nav {
+    padding-top: 80px;
+}
+
 .main-section-nav ul {
-    margin-top: 80px;
     display: flex;
     justify-content: center;
 }
@@ -134,15 +142,52 @@ a {
 /* Recently-section */
 .row {
     display: flex;
-    justify-content: space-between;
 }
 
 .recently-section .cards {
-    width: calc(90% / 6);
+    width: calc(100% / 6 - 1rem);
+    margin-right: 1rem;
 }
+
+.recently-section .cards:last-child {
+    margin-right: 0;
+}
+
+/* For-You Section */
+.for-you-section .cards {
+    width: calc(100% / 6 - 1rem);
+    margin-right: 1rem;
+}
+
+/* Popular Artists */
+.popular-artists .cards {
+    width: calc(100% / 6 - 1rem);
+    margin-right: 2rem;
+}
+
+.popular-artists .img-content {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    overflow: hidden;
+ }
+
+ .img-content img{
+    height: 100%;
+    object-fit: cover;
+ }
 
 /* FOOTER */
 footer {
+    width: 100%;
     height: 80px;
     background-color: var(--footer);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer .current-song img {
+    width: 50px;
+    align-self: flex-start;
 }
