working on hover effects

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,15 @@ a {
     margin-right: 1rem;
 }
 
+.icon-small {
+    font-size: .8rem;
+}
+
+.icon-big {
+    font-size: 1.5rem;
+    margin: 0 .5rem;
+}
+
 /* VARIABLES */
 :root {
     /* colors */
@@ -285,16 +294,76 @@ footer .current-song img {
 .current-song {
     width: 200px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+}
+
+.current-song .singer {
+    font-size: .8rem;
+}
+
+.current-song .title {
+    font-size: .7rem;
+    color: grey;
+}
+
+.current-song i {
+    color: grey;
 }
 
 /* Player */
 .player {
     width: 40%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.song-icons {
+    display: block;
+    margin-bottom: .5rem;
+}
+
+.song-icons i{
+    padding: 0 .5rem;
+}
+
+.song-length {
+    display: flex;
+    align-items: center;
+}
+
+.song-length span {
+    font-size: .6rem;
+    padding: 0 .5rem;
+}
+
+.current-length {
+    height: 5px;
+    border: 1px solid none;
+    background-color: white;
+    border-radius: 30px;
+    position: relative;
+}
+
+.left-length {
+    position: absolute;
+    right: 0;
+    height: 5px;
+    width: 70%;
+    background-color: #5a5a5a;
+    border: 1px solid none;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+
+.large-length {
+    width: 250px;
+}
+
+.small-length {
+    width: 100px;
 }
 
 /* Audio Settings */
@@ -304,6 +373,13 @@ footer .current-song img {
     justify-content: center;
     align-items: center;
 }
+
+.audio-settings i {
+    padding: 0 .3rem;
+    position: relative;
+}
+
+
 
 /* MEDIA QUERY */
 /* Layout Desktop Small (1100px) */
